--- a/HIScreenMenu/qdlgzoombar.ui
+++ b/HIScreenMenu/qdlgzoombar.ui
@@ -16,14 +16,17 @@
   <widget class="QPushButton" name="pushButton_max">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>10</x>
      <y>0</y>
-     <width>61</width>
-     <height>41</height>
+     <width>31</width>
+     <height>31</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <property name="text">
-    <string>+</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_min">
@@ -36,7 +39,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>-</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_1">
@@ -49,7 +52,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>+</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
@@ -62,7 +65,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>+</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
@@ -75,7 +78,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>+</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_4">
@@ -88,7 +91,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>+</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_5">
@@ -101,7 +104,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>+</string>
+    <string/>
    </property>
   </widget>
  </widget>
