--- a/HIScreenMenu/qdlgcambuttonset.ui
+++ b/HIScreenMenu/qdlgcambuttonset.ui
@@ -88,7 +88,7 @@
     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>50</x>
@@ -219,7 +219,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>170</x>
@@ -235,7 +235,7 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <widget class="QComboBox" name="comboBox_left1">
+     <widget class="QMyComboBox" name="comboBox_left1">
       <property name="minimumSize">
        <size>
         <width>0</width>
@@ -254,7 +254,7 @@ background-color: rgb(0, 0, 127);</string>
      </widget>
     </item>
     <item>
-     <widget class="QComboBox" name="comboBox_left2">
+     <widget class="QMyComboBox" name="comboBox_left2">
       <property name="minimumSize">
        <size>
         <width>0</width>
@@ -273,7 +273,7 @@ background-color: rgb(0, 0, 127);</string>
      </widget>
     </item>
     <item>
-     <widget class="QComboBox" name="comboBox_right1">
+     <widget class="QMyComboBox" name="comboBox_right1">
       <property name="minimumSize">
        <size>
         <width>0</width>
@@ -292,7 +292,7 @@ background-color: rgb(0, 0, 127);</string>
      </widget>
     </item>
     <item>
-     <widget class="QComboBox" name="comboBox_right2">
+     <widget class="QMyComboBox" name="comboBox_right2">
       <property name="minimumSize">
        <size>
         <width>0</width>
@@ -313,6 +313,13 @@ background-color: rgb(0, 0, 127);</string>
    </layout>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QMyComboBox</class>
+   <extends>QComboBox</extends>
+   <header location="global">qmycombobox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
