--- a/HIScreenMenu/qdlgenhancebar.ui
+++ b/HIScreenMenu/qdlgenhancebar.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QComboBox" name="comboBox_enhance">
+  <widget class="QMyComboBox" name="comboBox_enhance">
    <property name="geometry">
     <rect>
      <x>70</x>
@@ -39,6 +39,13 @@ background-color: rgb(0, 0, 127);</string>
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QMyComboBox</class>
+   <extends>QComboBox</extends>
+   <header location="global">qmycombobox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
