--- a/HIScreenMenu/qdlgdisplay.ui
+++ b/HIScreenMenu/qdlgdisplay.ui
@@ -297,6 +297,30 @@ background-color: rgb(0, 0, 127);</string>
     <string notr="true">background-color: rgb(161, 161, 161);</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_exit">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>260</y>
+     <width>101</width>
+     <height>34</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>微软雅黑</family>
+     <pointsize>18</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(29,59,140);
+color: rgb(255, 255, 255);
+border:none</string>
+   </property>
+   <property name="text">
+    <string>退出</string>
+   </property>
+  </widget>
  </widget>
  <customwidgets>
   <customwidget>
